--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "ember-data": "^2.13.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-power-select": "^2.0.4",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.13.3",
-    "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
   "engines": {
